--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <span class="nomesito">Toboolist</span>
     </header>
     <main>
-        <button class="boxazzurra">Add Task</button>
-        <button class="addsection">Add Section</button>
-        <!-- New task
-         -->
+        <nav id="navigazione">
+            <button class="boxazzurra">Add Task</button>
+            <button class="addsection">Add Section</button>
+        </nav>
+        <!-- New task -->
         <section>
             <h3>&#9662;New Task</h3>
         </section>
